fix: more overlap

--- a/cdn/dev/css/index.css
+++ b/cdn/dev/css/index.css
@@ -732,7 +732,7 @@
 
 @media all and (min-width: 768px) and (max-width: 1023px) and (orientation: portrait){
 	#main-banner{
-		top: 190px;	
+		top: 170px;	
 	}
 }
 
